# carbon_emission

./: Dockerfile.airflow  README.md  icook_collect_url.py  icook_recept_crawler.py  pyproject.toml
airflow/dags/: d_01_get_icook_yesterday_recipe.py  d_02_produce_icook_yesterday_recipe.py
data_pipeline/phase_01_data_ingestion/: README.md  phase_01_01_load_CSV.py  phase_01_03_upload_JSON_to_kafka.py
data_pipeline/phase_02_data_processing_&_storage/: phase_02_01_01_download_data_from_kafka.py  phase_02_01_02_upload_to_mongodb.py  phase_02_01_download_data_from_kafka.py
data_pipeline/phase_02_data_processing_&_storage/phase_02_01_upload_raw_data_to_mongodb_direct/: phase_02_01_02_upload_to_mongodb.py
data_pipeline/phase_02_data_processing_&_storage/phase_02_02_upload_data_to_staging_collection/: phase_02_02_01_Albert_download_data_from_kafka.py  phase_02_02_02_Albert_upload_to_mongodb_staging.py  phase_02_02_03_Albert_data_cleaning_amend_ingredient_name.py
docker/: README.md
icook_crawler/: run_crawler.py
icook_crawler/icook_crawler/: settings.py
icook_crawler/icook_crawler/pymongo/: load_csv_to_test.py
icook_crawler/icook_crawler/spiders/: icook.py  icook_category_usage.py  icook_recept_parser.py  utils.py
icook_crawler/icook_crawler/utils/: utils.py  utils_ingredient_map.py  utils_regex_pattern.py  utils_separate_num.py  utils_separate_num_unit.py  utils_separate_unit.py
kafka/producer/: produce.py
kafka/utils/: setup_topic_partition.py
pymongo/: from_mongodb_get_data.py  load_csv_to_mongodb.py
pymongo/utils/: mongodb_connection.py
(+8 files in other folders)
