[project]
name = "carbon-emission"
version = "0.1.0"
description = "group_project"
authors = [
    {name = "Chuan-Tung-Cheng",email = "chengreentea0813@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pathlib (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
